Firebase DB interactionn working + adaptor

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBJAqsWgZzQxcPxFgGSx-URVdANpf6mWMw",
+        authDomain: "movieproject-8dbd4.firebaseapp.com",
+        databaseURL: "https://movieproject-8dbd4.firebaseio.com",
+        projectId: "movieproject-8dbd4",
+        storageBucket: "movieproject-8dbd4.appspot.com",
+        messagingSenderId: "720195867549"
+      };
+      firebase.initializeApp(config);
+    </script> -->
+
   </head>
   <body>
     <noscript>
@@ -37,4 +53,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
 </html>
